# cann_op_contrib

./: .gitignore  .gitmodules  CANN_OP_CONTRIB_linux-x86_64.run  CMakeLists.txt  CONTRIBUTING_CN.md  NOTICE  OAT.xml  OWNERS  README.md  README_CN.md  README_zh.md  build.sh  classify_rule.yaml  pack.sh
cmake/: dependencies.cmake
cmake/util/: intf_pub_llt_gccnative.cmake  util.cmake
community/: CMakeLists.txt
community/common/inc/: context_util.h  cpu_kernel_register.h  cpu_kernel_utils.h  cpu_node_def.h  error_code.h  error_util.h  example.h  node_def_builder.h  op_attr.h  op_const.h  op_log.h  op_util.h
community/common/proto/: cpu_attr.proto  cpu_node_def.proto  cpu_tensor.proto  cpu_tensor_shape.proto
community/common/src/: error_util.cc  op_util.cc
community/common/utils/: aicpu_async_event.h  aicpu_context.h  aicpu_read_file.cpp  aicpu_read_file.h  aicpu_sharder.cc  axis_util.h  (+112 more)
community/framework/: CMakeLists.txt
community/framework/onnx/: CMakeLists.txt
community/framework/tf/: CMakeLists.txt  add_plugin.cc
community/ops/: CMakeLists.txt  aicpu.cmake  op_host.cmake  parser_ini.py  plugin.cmake
community/ops/abs/ai_core/impl/: abs.cpp
community/ops/abs/ai_core/op_info_cfg/ascend310p/: abs.ini
community/ops/abs/op_proto/: abs_proto.cc
community/ops/abs/op_proto/inc/: abs_op.h
community/ops/add/ai_core/cust_impl/: add.py
community/ops/add/ai_core/impl/: add.py
community/ops/add/ai_core/op_info_cfg/ascend310p/: add.ini
community/ops/add/ai_core/op_tiling/: add_tiling.cc
community/ops/add/ai_cpu/impl/kernels/: add_kernels.cc  add_kernels.h
community/ops/add/ai_cpu/impl/op_info_cfg/: add.ini
community/ops/add/aicpu/impl/: add.cc  add.h  add_kernels.cc
community/ops/add/aicpu/op_info_cfg/: add.ini
community/ops/add/framework/caffe/: add_plugin.cc
community/ops/add/framework/onnx/: add_plugin.cc
community/ops/add/framework/tf/: add_plugin.cc
community/ops/add/op_proto/: add_proto.cc
community/ops/add/op_proto/inc/: add_op.h
community/ops/add_custom/ai_core/op_host/: add_custom.cpp  add_custom_tiling.h
community/ops/add_custom/ai_core/op_kernel/: add_custom.cpp
community/ops/add_custom/framework/tf/: add_custom_plugin.cc
community/ops/add_tik2/ai_core/op_host/: add_tik2.cpp  add_tik2_tiling.h
community/ops/add_tik2/ai_core/op_kernel/: add_tik2.cpp
community/ops/add_tik2/framework/tf/: add_tik2_plugin.cc
community/ops/cholesky_grad/aicpu/impl/: cholesky_grad.cc  cholesky_grad.h
community/ops/cholesky_grad/aicpu/op_info_cfg/: cholesky_grad.ini
community/ops/cholesky_grad/op_proto/: cholesky_grad_proto.cc
community/ops/cholesky_grad/op_proto/inc/: cholesky_grad_op.h
community/ops/fft1d/ai_core/impl/: fft1d.py
community/ops/fft1d/ai_core/op_info_cfg/ascend910b/: fft1d.ini
community/ops/fft1d/framework/tf/: fft1d_plugin.cc
community/ops/fft1d/op_proto/: fft1d.cc
community/ops/fft1d/op_proto/inc/: fft1d.h
community/ops/pr_roi_pooling/ai_core/cust_impl/: pr_roi_pooling.py
community/ops/pr_roi_pooling/ai_core/impl/dynamic/: pr_roi_pooling.py
community/ops/pr_roi_pooling/ai_core/op_info_cfg/ascend910/: pr_roi_pooling.ini
community/ops/pr_roi_pooling/ai_core/op_tiling/: add_tiling.cc  pr_roi_pooling_tiling.cc  pr_roi_pooling_tiling_rt2.cc
community/ops/pr_roi_pooling/op_proto/: pr_roi_pooling_proto.cc  pr_roi_pooling_proto_rt2.cc
community/ops/pr_roi_pooling/op_proto/inc/: pr_roi_pooling_op.h
community/ops/sinh/ai_core/cust_impl/: sinh.py
community/ops/sinh/ai_core/op_info_cfg/ascend910b/: sinh.ini
community/ops/sinh/op_proto/: sinh_proto.cc
community/ops/sinh/op_proto/inc/: sinh_op.h
community/ops/stft/ai_core/impl/: stft.py
community/ops/stft/ai_core/op_info_cfg/ascend910/: stft.ini
community/ops/stft/framework/tf/: stft_plugin.cc
community/ops/stft/op_proto/: stft.cc
community/ops/stft/op_proto/inc/: stft.h
community/ops/sub/aicpu/impl/: sub.cc  sub.h
community/ops/sub/aicpu/op_info_cfg/: sub.ini
community/ops/sub/op_proto/: sub_proto.cc
community/ops/sub/op_proto/inc/: sub_op.h
community/ops/tanh/aicpu/impl/: tanh.cc  tanh.h
community/ops/tanh/aicpu/op_info_cfg/: tanh.ini
community/ops/tanh/op_proto/: tanh_proto.cc
community/ops/tanh/op_proto/inc/: tanh_op.h
community/tests/: CMakeLists.txt  aicpu_ut.cmake  ascendc_ut.cmake  main_ut.cpp  op_proto_ut.cmake  tik2_ut.cmake  tiling_ut.cmake
community/tests/abs/ut/op_proto/: test_abs_proto.cpp
community/tests/abs/ut/tik2/: abs_gen_data.py  abs_ut.cc
community/tests/add/st/: add.json
community/tests/add/ut/: add_proto_ut.cc  add_tiling_ut.cc
community/tests/add/ut/tbe/: test_add_impl.py
community/tests/add/ut/tiling/: add_tiling_ut.cc
community/tests/add_custom/st/: add_custom.json  run_case.sh
community/tests/add_custom/ut/ascendc/: add_ascend_c_ut.cc  add_custom_gen_data.py
community/tests/add_tik2/st/: add_tik2.json  run_case.sh  test_add_tik2_data.py
community/tests/add_tik2/ut/tik2/: add_tik2_gen_data.py  add_tik2_ut.cc
community/tests/cholesky_grad/st/aicpu/: CholeskyGrad_case.json
community/tests/cholesky_grad/ut/aicpu/: choleskyGrad_utest.cpp  cholesky_grad_gen_data.py
community/tests/cholesky_grad/ut/op_proto/: test_cholesky_grad_proto.cpp
community/tests/fft1d/ut/op_protp/: test_fft1d_op_proto.cpp
community/tests/pr_roi_pooling/st/: PrRoIPooling_case_ascend910.json  fuzz_roi.py  test_pr_roi_pooling_golden.py
community/tests/pr_roi_pooling/ut/tiling/: pr_roi_pooling_ut.cc
community/tests/sinh/ut/op_proto/: test_sinh_proto.cc
community/tests/sinh/ut/tbe/: test_sinh_impl.py
community/tests/stft/st/: stft_cast.json  stft_fuzz_impl.py
community/tests/stft/ut/op_proto/: test_stft_proto.cpp
community/tests/stft/ut/tbe/: test_stft_impl.py
community/tests/tanh/ut/aicpu/: tanh_gen_data.py  tanh_utest.cpp
scripts/: CANN_OP_CONTRIB_install.sh  ai_core_parse_ini.py  gen_ascendc_code.py  gen_ops_filter.sh  gen_test_data.py  gen_tik2_code.py  install_run.sh  parser_ini.py  run_aicpu_ut.sh  run_ascendc_ut.sh  run_op_proto_ut.sh  run_tbe_ut_all.py  run_tik2_ut.sh  run_tiling_ut.sh
